test/pass/kinded_parameter.sest
module KindedParameter = struct

  type t<$a :: o> =
    | HasFoo($a)

  let f(x) =
    case x of
    | HasFoo(r) -> r
    end

end
