test/fail/error_kinded_parameter.sest
module ErrorKindedParameter = struct

  type t<$a :: {foo : int}> =
    | HasFoo($a)

  val f(x) =
    case x of
    | HasFoo(r) -> r
    end

  val g(b, x, y) =
    case x of
    | HasFoo(r) ->
        if b then r else { y | bar = x }
    end

end
